--- a/print.html
+++ b/print.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML>
-<html lang="en" class="sidebar-visible no-js light">
+<html lang="en" class="light" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>Bhikkhu Manual</title>
-        <meta name="robots" content="noindex" />
+        <meta name="robots" content="noindex">
 
 
         <!-- Custom HTML head -->
         
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="theme-color" content="#ffffff" />
+        <meta name="theme-color" content="#ffffff">
 
         <link rel="icon" href="favicon.svg">
         <link rel="shortcut icon" href="favicon.png">
@@ -34,15 +33,16 @@
         <link rel="stylesheet" href="assets/stylesheets/output-html.css">
 
     </head>
-    <body>
+    <body class="sidebar-visible no-js">
+    <div id="body-container">
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -58,27 +58,34 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
             var html = document.querySelector('html');
-            html.classList.remove('no-js')
             html.classList.remove('light')
             html.classList.add(theme);
-            html.classList.add('js');
+            var body = document.querySelector('body');
+            body.classList.remove('no-js')
+            body.classList.add('js');
         </script>
 
+        <input type="checkbox" id="sidebar-toggle-anchor" class="hidden">
+
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
-            var html = document.querySelector('html');
-            var sidebar = 'hidden';
+        <script>
+            var body = document.querySelector('body');
+            var sidebar = null;
+            var sidebar_toggle = document.getElementById("sidebar-toggle-anchor");
             if (document.body.clientWidth >= 1080) {
                 try { sidebar = localStorage.getItem('mdbook-sidebar'); } catch(e) { }
                 sidebar = sidebar || 'visible';
+            } else {
+                sidebar = 'hidden';
             }
-            html.classList.remove('sidebar-visible');
-            html.classList.add("sidebar-" + sidebar);
+            sidebar_toggle.checked = sidebar === 'visible';
+            body.classList.remove('sidebar-visible');
+            body.classList.add("sidebar-" + sidebar);
         </script>
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
@@ -88,20 +95,42 @@
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
+        <!-- Track and set sidebar scroll position -->
+        <script>
+            var sidebarScrollbox = document.querySelector('#sidebar .sidebar-scrollbox');
+            sidebarScrollbox.addEventListener('click', function(e) {
+                if (e.target.tagName === 'A') {
+                    sessionStorage.setItem('sidebar-scroll', sidebarScrollbox.scrollTop);
+                }
+            }, { passive: true });
+            var sidebarScrollTop = sessionStorage.getItem('sidebar-scroll');
+            sessionStorage.removeItem('sidebar-scroll');
+            if (sidebarScrollTop) {
+                // preserve sidebar scroll position when navigating via links within sidebar
+                sidebarScrollbox.scrollTop = sidebarScrollTop;
+            } else {
+                // scroll sidebar to current active section when navigating via "next/previous chapter" buttons
+                var activeSection = document.querySelector('#sidebar .active');
+                if (activeSection) {
+                    activeSection.scrollIntoView({ block: 'center' });
+                }
+            }
+        </script>
+
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
                                 <div id="menu-bar-hover-placeholder"></div>
-                <div id="menu-bar" class="menu-bar sticky bordered">
+                <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
-                        <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
+                        <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
                             <i class="fa fa-bars"></i>
-                        </button>
+                        </label>
                         <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                            <li role="none"><button role="menuitem" class="theme" id="light">Light (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
@@ -134,7 +163,7 @@
                 </div>
 
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -150,7 +179,7 @@
   <a href="https://bhikkhu-manual.github.io">bhikkhu-manual.github.io</a>
 </div>
 <div>
-  <p><em>Last updated on: 2022-02-22</em></p>
+  <p><em>Last updated on: 2024-01-06</em></p>
 </div>
 <h2 id="downlads"><a class="header" href="#downlads">Downlads</a></h2>
 <p><em>(NOTE: See the <a href="./print-guide.html">Print Guide</a> for press-quality print files and guidelines.)</em></p>
@@ -1538,7 +1567,7 @@ tacapariyanto pūro nānappakārassa asucino</p>
 <p>In this body there are:</p>
 </blockquote>
 </div>
-<table><thead><tr><th></th><th></th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>kesā</td><td><em>hair of the head</em></td></tr>
 <tr><td>lomā</td><td><em>hair of the body</em></td></tr>
 <tr><td>nakhā</td><td><em>nails</em></td></tr>
@@ -1572,6 +1601,7 @@ tacapariyanto pūro nānappakārassa asucino</p>
 <tr><td>muttaṃ</td><td><em>urine</em></td></tr>
 <tr><td>matthaluṅgan’ti</td><td><em>brain</em></td></tr>
 </tbody></table>
+</div>
 <p>Evam-ayaṃ me kāyo uddhaṃ pādatalā adho kesamatthakā<br />
 tacapariyanto pūro nānappakārassa asucino</p>
 <div class="english">
@@ -2460,7 +2490,7 @@ In Dhammayut circles and frequently in the forest tradition, the third chant is
 contains D1-D7 as below, the <em>sipsong tamnaan</em>
 contains S1-S12. Chants that are not numbered ‘D’ or ‘S’ can
 be included or not, as wished, but should be recited in the order listed here.</p>
-<table><thead><tr><th></th><th>first line</th><th></th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th></th><th>first line</th><th></th></tr></thead><tbody>
 <tr><td>i1</td><td><a href="chants/parittas.html#namo-tassa">Namo tassa</a></td><td></td></tr>
 <tr><td>i2</td><td><a href="chants/parittas.html#buddham-saranam">Buddhaṃ saraṇaṃ gacchāmi</a></td><td></td></tr>
 <tr><td>i3/a</td><td><a href="chants/parittas.html#sambuddhe">Sambuddhe aṭṭhavīsañca</a></td><td></td></tr>
@@ -2489,6 +2519,7 @@ be included or not, as wished, but should be recited in the order listed here.</
 <tr><td></td><td><a href="chants/parittas.html#te-attha-laddha">Te attha-laddhā sukhitā</a></td><td></td></tr>
 <tr><td></td><td><a href="chants/parittas.html#bhavatu">Bhavatu sabba-maṅgalaṃ</a></td><td></td></tr>
 </tbody></table>
+</div>
 <h3 id="notes-for-particular-chants"><a class="header" href="#notes-for-particular-chants">Notes for Particular Chants<a id="particular"></a></a></h3>
 <p><strong>Asevanā ca bālānaṃ:</strong> The candles on the shrine during a house invitation are
 lit by the senior bhikkhu or nun at <em>Asevanā</em>.</p>
@@ -4867,7 +4898,8 @@ When the dreaded hot wind arises, that is warded off.<br />
 To meditate and obtain insight in a refuge and at ease:</p>
 </blockquote>
 <blockquote>
-<p>A dwelling-place is praised by the Awakened One\\vin as chief gift to an Order.<br />
+<p>A dwelling-place is praised by the Awakened One<br />
+<span class="vin"></span>as chief gift to an Order.<br />
 Therefore a wise man, looking to his own weal,<br />
 Should have charming dwelling-places built<br />
 So that those who have heard much can stay therein.</p>
@@ -5548,7 +5580,7 @@ and useless as a rotten log.</p>
 <li><a href="chants/suttas.html#fire-sermon">The Fire Sermon</a></li>
 <li><a href="chants/suttas.html#anapanassati">Ānāpānassati-sutta</a></li>
 <li><a href="chants/suttas.html#dhaj-agga">Dhaj’agga Sutta</a></li>
-<li><a href="chants/suttas.html#girimananda">Girimānanda-suttaṃ</a></li>
+<li><a href="chants/suttas.html#girimananda">Girimānanda-sutta</a></li>
 </ul>
 <h2 id="dhammacakkappavattana-sutta"><a class="header" href="#dhammacakkappavattana-sutta">Dhammacakkappavattana-sutta<a id="dhammacakkappavattana"></a></a></h2>
 <div class="instr">
@@ -6614,7 +6646,7 @@ Bhayaṃ vā chambhitattaṃ vā,<br />
 Loma-haṃso na hessatī-ti.”</p>
 <p>Dhaj’agga Suttaṃ Niṭṭhitaṃ.</p>
 <p><em>S.I.218</em></p>
-<h2 id="girimānanda-suttaṃ"><a class="header" href="#girimānanda-suttaṃ">Girimānanda-suttaṃ<a id="girimananda"></a></a></h2>
+<h2 id="girimānanda-sutta"><a class="header" href="#girimānanda-sutta">Girimānanda-sutta<a id="girimananda"></a></a></h2>
 <p>[Evaṃ me sutaṃ] 
 Ekaṃ samayaṃ bhagavā sāvatthiyaṃ viharati jetavane
 Anāthapiṇḍikassa ārāme. Tena kho pana samayena āyasmā Girimānando ābādhiko hoti
@@ -7143,7 +7175,7 @@ Imehi pañcahi aṅgehi samannāgatassa<br />
 sāmaṇerassa daṇḍa-kammaṃ kātun’ti</p>
 <div class="english">
 <blockquote>
-<p>These are the ten grounds for a novice to be punished<br />
+<p>These are the five grounds for a novice to be punished<br />
 that were established by the Blessed One.</p>
 </blockquote>
 </div>
@@ -9085,13 +9117,14 @@ written forms have emerged, they have been in the letterings of other languages
 (e.g. Devanagari, Sinhalese, Burmese, Khmer, Thai, Roman). The Roman lettering
 used here is pronounced as in English, with the following clarifications:</p>
 <h2 id="vowels"><a class="header" href="#vowels">Vowels</a></h2>
-<table><thead><tr><th>Short</th><th>Long</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th>Short</th><th>Long</th></tr></thead><tbody>
 <tr><td><strong>a</strong> as in <strong>a</strong>bout</td><td><strong>ā</strong> as in f<strong>a</strong>ther</td></tr>
 <tr><td><strong>i</strong> as in h<strong>i</strong>t</td><td><strong>ī</strong> as in mach<strong>i</strong>ne</td></tr>
 <tr><td><strong>u</strong> as in p<strong>u</strong>t</td><td><strong>ū</strong> as in r<strong>u</strong>le</td></tr>
 <tr><td></td><td><strong>e</strong> as in gr<strong>e</strong>y</td></tr>
 <tr><td></td><td><strong>o</strong> as in m<strong>o</strong>re</td></tr>
 </tbody></table>
+</div>
 <p>Exceptions: <strong>e</strong> and <strong>o</strong> change to short sounds in syllables ending in
 consonants. They are then pronounced as in ‘g<strong>e</strong>t’ and ‘<strong>o</strong>x’, respectively.</p>
 <h2 id="consonants"><a class="header" href="#consonants">Consonants</a></h2>
@@ -9442,26 +9475,27 @@ Reference Edition (ebook)</p>
 
 
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
 
 
-        <script src="elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="searcher.js" type="text/javascript" charset="utf-8"></script>
+        <script src="elasticlunr.min.js"></script>
+        <script src="mark.min.js"></script>
+        <script src="searcher.js"></script>
 
-        <script src="clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="clipboard.min.js"></script>
+        <script src="highlight.js"></script>
+        <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
 
-        <script type="text/javascript">
+        <script>
         window.addEventListener('load', function() {
             window.setTimeout(window.print, 100);
         });
         </script>
 
+    </div>
     </body>
 </html>
